--- a/release_notes/45-release-notes.adoc
+++ b/release_notes/45-release-notes.adoc
@@ -18,6 +18,7 @@ toc::[]
 |`4.5.0` | 24 July 2024
 |`4.5.1` | 14 August 2024
 |`4.5.2` | 16 September 2024
+|`4.5.3` | 30 September 2024
 
 |====
 
@@ -425,5 +426,19 @@ This release of {product-title-short} fixes the following bugs:
 This release of {product-title-short} fixes the following security vulnerability:
 
 * https://access.redhat.com/security/cve/CVE-2024-3727[CVE-2024-3727]: Fixed a vulnerability related to Scanner where the `containers/image` digest type did not guarantee a valid type.
+
+[id="about-release-453_{context}"]
+== About release 4.5.3
+
+*Release date*: 30 September 2024
+
+This release of {product-title-short} includes the following changes:
+
+* Fixes a broken pipe error that caused the Central UI dashboard to display incomplete data.
+* Adds a new `--with-database-only` option to the `roxctl central debug download-diagnostics` command. Use it to generate diagnostic bundles for troubleshooting connection issues related to policy violations and deployments.
+
+This release of {product-title-short} fixes the following security vulnerability:
+
+* https://access.redhat.com/security/cve/CVE-2024-39249[CVE-2024-39249]: Fixed a Regular expression denial of service (ReDoS) vulnerability in {product-title-short} main container.
 
 include::modules/image-versions.adoc[leveloffset=+1]
